# rl_an_introduction_solutions

./: .gitignore  README.md  pyproject.toml
chapter_02/code/: bandit.py  exercise_2_11.ipynb  exercise_2_5.ipynb  k_armed_bandit_test.ipynb  parameter_study_test.ipynb  thompson_sampling.ipynb  thompson_sampling_demo.ipynb  utils.py
