[tool.poetry]
name = "rl_an_introduction_solutions"
version = "0.1.0"
description = ""
authors = ["Alessio <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
jupyter = "^1.0.0"
notebook = "^6.2.0"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
numba = "^0.53.0"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
